@@ -10,25 +10,27 @@ AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb
 AUX i2pd.service 412 SHA256 afc2b4a72e3bec2c45a838971375a1e8a438bc9cb09a082f138583e226ee8402 SHA512 99ec3dbe7c983d732c483207f49a9b9456c83c17b76605f663fb177142e09e11e0e3fe4e10ffaaca3b9e08519a055ab5efee4117b6e977d22ec80c6aa7c3d3eb WHIRLPOOL dc47e828a8a457e16e16ff5dae50c73fdeaa6a79d36d2f2d4e44919e06e222a2b14d0677c77ef2d471107d8ce669ad499172656f3985bee18697f2725df2e95e
 DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
 DIST i2pd-0.6.0.tar.gz 360829 SHA256 149a8c2d870ebc3988aea06eec906c9e968b3d89ae282bd3b2b5ead205f7c3b7 SHA512 084c75c5f972dbc07740119c3ae1711924cf740391703a95752164eab7a04d6cea0cfb302530e1e1bebafb54f9eed552e747479ae55fb053e824cdf059ab3266 WHIRLPOOL a858a49173755e052f31a95f4f7075965dac0c89943a7dc05c3c88d51b646ab86a7510a9533e33d9c5f0e7736e9f702f6fd0de4e6a841cc3ec57ea5aaf2b991c
-EBUILD i2pd-0.5.0.ebuild 1940 SHA256 44f7b0468c6ceb0feba8f5366a6ac5dcb393247047001e09950648c373f83a2a SHA512 865bf4ab78655b4bbd3bf697c41503fcdf0905af0125bef9cff685f4b7a5d7d46a3cab505cb8293ae1416e9f5368ee7a3bfae3a5cf366b922e58cfa663e51bc7 WHIRLPOOL 8ed875ed2e9e35f4ff9c946bef7a096746283ba6884e71135ae36c33eec4ebd959469ced02c3d9a5afd9f65be6368f8e92ed70eec67675bf75f1d2d541cfb0c0
-EBUILD i2pd-0.6.0.ebuild 1977 SHA256 9dcd3a4b2fb6255850e63f610a45b8c7b0b379e49d6f411bec34fe481d9f1652 SHA512 d24c1b8e0cd14a8a9ddfe9bee87a77a0e1960ce6bc83849a212a897100f9d08a7d2bc8216bc56e65b7c8f824ab0678aca84872a1bc95a6a511e874da189dccf1 WHIRLPOOL 8f64873b43930b00d20e446ab8b7d4ebeacfe1c49b57c8da64ce5904c447ee3ef22e58d355ecb0260517bb1e25c3e3409f18699a2a79ca782c799038455c0a89
-EBUILD i2pd-9999.ebuild 2396 SHA256 f456caeeb4b1e7533ab3360cea6ba8c950eb1ac02766a53e351f5b5340dbca37 SHA512 eae0e7ee4f411fa8fd829de2facfd082d031d390930c6c6b2bae828bf4ac348112560f25a8adfd0827111deffe86c8acbc5de4af93db2c188fa290497362b96e WHIRLPOOL 6f21e52eb55644c6b07a4bd69105dfef3c1cbc1fc32dd89ef6d5f76c8d20c9cc549fc7e359be5f9e785c2ef950385bec24891e5fcb3a49c9e9cc10129fa7f00d
-MISC ChangeLog 1691 SHA256 f9dd60dc0afa1d2969c20741659be8e9fb7924b24eb04ddbe573f266e60f0665 SHA512 467afe287bd5552c6d455603a2f87106f8c7bc5f57090e38e7f33d1215b8b76aba33dfca311cab5c1ccaddd6b044e098988bbb6b466e4d2493d771044f330c61 WHIRLPOOL 2ef2a8e583b7676f63a66c6cd2445604d43e94f5b9d9459651f701818e80f703d10471eea03f0d28b2cc39dfe89ec494a035da97b7f2963c09f3368332c104d5
-MISC metadata.xml 604 SHA256 bff49a6af2c6c5049ef60dce3498b9ea20cd2439a06df52484f8826438f86a20 SHA512 3ca0192856554aee50cffc28710c3686a18c860f053f725d9af01da3b061fa1ec35e4c0d761caf7d3045adc686510ebc0450ecd776dfff04591ca6620f3c39db WHIRLPOOL 754dad80541a08aa22835928eabff941e66cda3cbd4d06e48435eadd24060637a585aced54d1061a2eaa861087f584294c082d78aa36961a4d13756af2d6c69b
+EBUILD i2pd-0.5.0.ebuild 1962 SHA256 64cb6f1abadfc1de30b736d32cc7b5df97eb52919d7861e9488af557b575c2c2 SHA512 9311d77bcae0eba96ff141e1224caa9a9c78f428b477c48aa5f3fb3f390cb50fc8be708445524ea96ccfd7d093c7c483c43cd0b09d90cc365d48278f3368b6f4 WHIRLPOOL 535e3ddd5b6487e2afb58d3f98b75e500da71d17a4f9028459155491c24babad67926e1b6b96751d79f2c8fb3352e3169bba511befd53187660b02c412abe0c1
+EBUILD i2pd-0.6.0.ebuild 1999 SHA256 8b11c3246aedb9c51d8cf0ea24f834d4900eba02ea886cc8bf938ce5f0895200 SHA512 804bd79fa4b5235609562d9983be5b1edd4f2538413112489e7247eee991e159ec0d5a8dab96770b867a0ba0c51d048f4c70f21fdb186bd6133c2feab2ebb79d WHIRLPOOL c09db2b296f4acf8ead0c65c352b8ef5a486ef5ebda54ae04293bb54758083c22078e0aa881be60ca8c4924f061655c478703c2f865378fa297c557a7c1843b2
+EBUILD i2pd-9999.ebuild 2418 SHA256 c25b3dc79729114b840da6542adac517ed31480ff60ae818b1f9219717563cfe SHA512 0a205e42de682b35f48160bf21c6a679fd1d8d73bc92ee69b4f7d750fea8bafb7a18dd4644d433b3d1c577203608a055111677ed7d7c96a0d7a02d4f705404f5 WHIRLPOOL abe650d2f0b0947413cc8b8be15b9f0b6852020ec705f03e209169dcba6c6efacc28efb6313644964ace4e94155ba17fa692c05bd3c5587b376d594a4262401a
+MISC ChangeLog 1850 SHA256 afef0d08e75ee62222c259b24fa888538e5d8517df6c6b7a4ec3a75e785c48c2 SHA512 ef764665fc54df2a1a9f9e75325631af227f5200a6d6a5326d5191e91ac22c3d0e71f6da5f03b837d193895766d2d9facacbf994ee903e56d45d76eabe64a42d WHIRLPOOL 5f8466fdcc9eb40d67cd3c94282e4704e6c4f2274acb9378624073fa5f0c9a5136a7700a66de6ac25d16ebb0853c5f2b982a4dd165f505357ae5de9700391384
+MISC metadata.xml 523 SHA256 bf0415cb10300a3494e0cb73d4a3357ef1ac293d1e3732e6d586e575f21f8888 SHA512 b32d2faac172e2118858ade073716010b296edcb80f7e3095693619c6343b9d3594f971def7d6f919a00bcd848c05b7542f8f723c7e4de547f66a2ea9665c930 WHIRLPOOL 226cce55cf76223ddb49c9cfb8d2dbed2d0200fa56fc3d9a165371276f9e3880f179722e8caffa1c74a90b8a6ba3b6bbdec8de2175601e742af091ee53b6c37d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUrwlZAAoJEJOE+m71LUu6KIAP/0iutZRekKibvs4Rdq2W/iMh
-87DFRcHJhY6+B7REKcwFb2pju/eYk4e6P6Xeo0W8YOF1lYXe1g6hOsJ0wKOfFnry
-Q462UHzypoOefYzRKn7YUCNKC66/2X0GZCg6+c6ihVvuOkA1yWHsTOiGok4MbLxJ
-068EzYWIOaifjx1YztnktNWA4LNBDx5lqFi/y6GQKINSv4l/RIFWGkKHLAjIFyin
-6hnpUIzAR1XBPKPh2c+E3P1c7Yx5aTNvRA10vBaUF8AfBZ6Nb1nbJhzBUZ09ICEm
-B/N7ZMvQ6qJ/ggGqrFthlyPRWIUVi1AJcAk/B+QN79oCz076Uh0fMy45aZF1+uRZ
-LPfpLcwwqmW/EhcadwV01BgnVFef+kEC3RG/LR3LH8DYR8vthSYFpuFNFs5u19Po
-/hrzGJLaEage0p1KMJjBOMo5aEbsRdZeu+PqrpVkt1xsHiW2DODAQXw/WLtsdA1O
-wHt9M3ND7Gw8o2HRMRNOtfbftFrXFcnRoMlk01jnSGGe0QEA5SP2OrBfjyv1kdnF
-aOWuPPGN66i0bfwlpoMv/2KIOILYAiNfoh/VO0q9+09CXVYAqZqvTqr9TJg3edNE
-rbTR2pnNwZjGvIvAxTFaQk8ft9ZuPZdSH3b9DaZTZ5AL9zOpiGrHdvUZa1jFlAu+
-VieiqP8SVY6+2MKEcejK
-=EdfB
+iQJ8BAEBCABmBQJUz65+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOVuwP+gM3wAVZ28wQsT6r4yTGswz6
+FfLZkUEbnkZ6f8igVseaKq6vbuQ5q8P6Y3tTlEIEgj7JyLEe7j3deDeMC/eelLJ1
+QD6bil9cHxeC6lAVi4hbS69TqN0eQ6MOqWjAmS4LBsFG+QZMH1YMaImknt9Y59WL
+JZGkvVbhOLBkmE4Q6OAEztzbZacgHyknV1h5HMxeWPb32U1GEGtypNWgtaoD3dCR
+OtdKlS8mnklQDQ3i1JEagyBFHATX4qAqjnKHXdAmCSwqoU5eWrFCjMMyrIObsYG9
+aQUf9fBy3YpOEUHJ3DAYVN4Edc2tSKNRWnym0PasTQyIRX5V08xIcskmlUWYTwoa
+SFwbl50k356p2POFU4IxBdPHekLYxbi0lWstr96rtXnGcFo7s+dG2Aw++xTohduw
+nFXSm4nawknQrT13uKrFCwI6qpiQShiWSTo+ryn5yUm9uHAyuDyhYFKxGlzjN1EE
+pe7IurME+z1ZjoUhyGtIgR2UgWY7iIhmyYpaw8+PSUSd93tf9N1MOBr8Yf0sGduq
+aknSeTvOd84kf0dX9EJigdJN9fDIOwKcjbtveFCFRRcFiNKQirIYSdVPQ0ppz2CY
+8+/eg/XBfmVwTrgb2qJ4kkqXuzihQi8VkTTzd+GdhNmEVnn0KlofzW7anZGoyo7j
+I08/18mhx5W+IDQ085mO
+=LY0Z
 -----END PGP SIGNATURE-----
