@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/i2pd/i2pd-9999.ebuild,v 1.1 2015/01/08 22:44:46 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/i2pd/i2pd-9999.ebuild,v 1.2 2015/02/02 17:06:04 mgorny Exp $
 
 EAPI=5
 inherit eutils systemd user git-2 cmake-multilib
@@ -12,7 +12,7 @@ EGIT_REPO_URI="git://github.com/PrivacySolutions/i2pd"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE="aesni i2p-hardening library static"
+IUSE="cpu_flags_x86_aes i2p-hardening library static"
 
 RDEPEND="!static? ( >=dev-libs/boost-1.46[threads] )
 	!static? ( dev-libs/crypto++ )
@@ -32,7 +32,7 @@ CMAKE_USE_DIR="${S}/build"
 
 multilib_src_configure() {
 	mycmakeargs=(
-		$(cmake-utils_use_with aesni AESNI)
+		$(cmake-utils_use_with cpu_flags_x86_aes AESNI)
 		$(cmake-utils_use_with i2p-hardening HARDENING)
 		$(cmake-utils_use_with library LIBRARY)
 		$(cmake-utils_use_with static STATIC)
