@@ -10,9 +10,6 @@
 		<name>Anthony G. Basile</name>
 	</maintainer>
 	<use>
-		<flag name="aesni">
-			Enable support for the AES-NI instruction set
-		</flag>
 		<flag name="i2p-hardening">
 			Compile with hardening on vanilla compilers/linkers
 		</flag>
