@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/i2pd
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/i2pd/ChangeLog,v 1.2 2015/01/08 22:47:37 blueness Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/i2pd/ChangeLog,v 1.3 2015/02/02 17:06:04 mgorny Exp $
+
+  02 Feb 2015; Michał Górny <mgorny@gentoo.org> i2pd-0.5.0.ebuild,
+  i2pd-0.6.0.ebuild, i2pd-9999.ebuild, metadata.xml:
+  Use cpu_flags_x86_aes, bug #538556.
 
   07 Jan 2015; Francisco Blas Izquierdo Riera (klondike) i2pd-0.6.0.ebuild:
   Remove library USE as it doesn't work the expected way
